Changes for 2.5.0

New features:
..F....... [ZBXNEXT-1036] improved "Most busy triggers top 100" page filter (Oleg)
..F....... [ZBXNEXT-2602] minor design and layout improvements (Pavels)
........S. [ZBXNEXT-2471] improved value cache management by resetting item's cached range to the daily request range once per day (wiper)
...G...... [ZBXNEXT-2320] added agent crash handling on Windows to log its stack trace (wiper)
..FG...... [ZBXNEXT-1078] added 'proc.mem[]' 5th parameter (memtype) on AIX, FreeBSD, Linux, Solaris; thanks to Johan Fischer and gescheit for agent patches for Linux and FreeBSD (Andris)
...G...... [ZBXNEXT-2006] added {#FSDRIVETYPE} macro to vfs.fs.discovery on Windows (asaveljevs)
.......PS. [ZBXNEXT-207] added a runtime control option to force execution of housekeeper (igors, wiper)
........S. [ZBXNEXT-1799] added support of low-level discovery macros in the "IPMI sensor" field (Sasha)
........S. [ZBXNEXT-2079] added support of low-level discovery macros in the "Units" field (Sasha)
...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable tcp based queries (wiper)
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
...G...PS. [ZBX-9002] fixed log file locking during logging (igors)
..F....... [ZBX-8943] fixed script ordering when using backslashes in popup script menus (arvids)
..F....... [ZBX-8922] fixed form element positioning issues in host add/edit form (arvids)
..F....... [ZBX-8934] removed translation for the bytes unit prefixes (KB, MB, etc) (arvids)
..F....... [ZBX-8888] fixed history.php showing data for 11 more seconds than the defined interval (arvids)
..F.....S. [ZBX-9005] fixed aggregate item check to make forth parameter not mandatory when third parameter is set to 'last' (igors)