@@ -643,6 +643,8 @@ define('PERM_DENY',			0);
 define('PARAM_TYPE_TIME',		0);
 define('PARAM_TYPE_COUNTS',		1);
 
+define('ZBX_DEFAULT_AGENT', 'Zabbix');
+
 define('HTTPTEST_AUTH_NONE',	0);
 define('HTTPTEST_AUTH_BASIC',	1);
 define('HTTPTEST_AUTH_NTLM',	2);
