@@ -1,6 +1,7 @@
 Changes for 2.5.0
 
 New features:
+A.F....... [ZBXNEXT-1821] added "Zabbix" as default user agent and updated outdated user agent strings in web scenario form (Ivo)
 ..F....... [ZBXNEXT-1036] improved "Most busy triggers top 100" page filter (Oleg)
 ..F....... [ZBXNEXT-2602] minor design and layout improvements (Pavels)
 ........S. [ZBXNEXT-2471] improved value cache management by resetting item's cached range to the daily request range once per day (wiper)
